cloud/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utopia-ingress
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: utopia-ingress
spec:
  rules:
  - http:
      paths:
        - path: /airline
          pathType: Prefix
          backend:
            service:
              name: flights-service
              port:
                number: 5000
        - path: /booking
          pathType: Prefix
          backend:
            service:
              name: bookings-service
              port:
                number: 5000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: users-service
              port:
                number: 5000
